@@ -12,6 +12,8 @@ launchpad-buildd (155) UNRELEASED; urgency=medium
   * Raise more useful exceptions when LXD.copy_in or LXD.copy_out fail.
   * Make Backend.run implementations print command output if echo and
     get_output are both true.
+  * Make Backend.is_package_available handle the case where the requested
+    package name is purely virtual.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Sep 2017 13:42:17 +0100
 
